alteraçoes nos index's, ainda não esta totalmente funcional

--- a/MasterManager-war/web/admin/admin_publictest_details.xhtml
+++ b/MasterManager-war/web/admin/admin_publictest_details.xhtml
@@ -87,7 +87,7 @@
                 <br/>       
                 <br/>
 
-                <h:link value="Return" outcome="index"/>
+                <h:link value="Return" outcome="admin_index"/>
 
                 <h:messages errorStyle="color: red" /> 
             </ui:define>
