--- a/MasterManager-war/web/admin/admin_student_details.xhtml
+++ b/MasterManager-war/web/admin/admin_student_details.xhtml
@@ -35,7 +35,7 @@
 
         <br/>
 
-        <h:link value="Return" outcome="index"/>
+        <h:link value="Return" outcome="admin_index"/>
         
         <h:messages errorStyle="color: red" />        
         
