--- a/MasterManager-war/web/login.xhtml
+++ b/MasterManager-war/web/login.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Login to Academics Management</title>
+        <title>Login to Master Manager</title>
     </h:head>
     <h:body>
         <c:if test="${not userManager.someUserAuthenticated}">
