--- a/MasterManager-war/web/student/student_index.xhtml
+++ b/MasterManager-war/web/student/student_index.xhtml
@@ -21,7 +21,11 @@
                 list="#{administratorManager.allProjectProposals}">
                 <p:column headerText="Acções">
                     <h:form>
-                        <!-- candidatar -->
+                        <h:commandLink value="Consultar" action="student_project_proposal_details?facesredirect=true">
+                            <f:setPropertyActionListener
+                                target="#{administratorManager.currentProjectProposal}" value="#{object}" />
+                        </h:commandLink>
+                        &nbsp;
                     </h:form>
                 </p:column>
             </em:dt>
