--- a/MasterManager-war/web/proponent/project_proposals_create.xhtml
+++ b/MasterManager-war/web/proponent/project_proposals_create.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
-    <ui:composition template="./templates/skeleton.xhtml">
+    <ui:composition template="../templates/skeleton.xhtml">
         <ui:define name="title">Create Project Proposal</ui:define>
         <ui:define name="main">
 
