--- a/MasterManager-war/web/admin/admin_project_proposals_details.xhtml
+++ b/MasterManager-war/web/admin/admin_project_proposals_details.xhtml
@@ -55,12 +55,12 @@
                     <h:outputText 
                         id="proponent"
                         value="#{administratorManager.currentProjectProposal.proponentUsername}"/>
-                    
+
                     <h:outputLabel for="projectProposalState" value="Project Proposal State " />
                     <h:outputText 
                         id="projectProposalState"
                         value="#{administratorManager.currentProjectProposal.projectProposalState}"/>
-                    
+
                 </h:panelGrid>
 
 
@@ -88,21 +88,41 @@
 
 
                 <h:form>
-                    <h:commandLink value="Aceitar Proposta"
-                                   actionListener="#{administratorManager.approveProjectProposal(true)}">
-                        <img alt="Check Yes" src="../resources/images/check_yes.png"></img>
 
-                    </h:commandLink>
-                    <h:commandLink value="Recusar Proposta"
-                                   actionListener="#{administratorManager.approveProjectProposal(false)}">
-                        <img alt="Check No" src="../resources/images/check_no.png"></img>
-                    </h:commandLink>
+                    <h:panelGrid columns="3">
+
+                        <h:outputLabel for="message" value="Mensagem: " />
+                        <h:inputText 
+                            id="message"
+                            size="10"
+                            required="true"
+                            requiredMessage="Erro: Mensagem não pode estar vazia."
+                            value="#{administratorManager.newObservation.message}"/>
+                        <h:message for="message" errorStyle="color: red" />
+
+                        <h:outputLabel for="projectProposalState" value="Estado a transitar: " />
+                        <h:selectOneMenu
+                            id="projectProposalState"
+                            value="#{administratorManager.newObservation.projectProposalState}" >
+                            <f:selectItems
+                                value="#{administratorManager.allProposalValidationStates}"
+                                var="ccp"/>
+                        </h:selectOneMenu>
+                        <h:message for="projectProposalState" errorStyle="color: red" />
+
+                        <h:commandButton
+                            id="submit"
+                            value="Adicionar Observação"
+                            binding="#{administratorManager.component}" 
+                            action="#{administratorManager.addObservation}" />
+                        <h:message for="submit" style="color: red"/>
+                    </h:panelGrid>
                 </h:form>
 
 
                 <br/>
 
-                <h:link value="Return" outcome="index"/>
+                <h:link value="Return" outcome="admin_index"/>
 
                 <h:messages errorStyle="color: red" />        
 
