--- a/MasterManager-war/web/student/student_index.xhtml
+++ b/MasterManager-war/web/student/student_index.xhtml
@@ -21,11 +21,16 @@
                 list="#{administratorManager.allStudentApplications}">
                 <p:column headerText="Acções">
                     <h:form>
-                        <h:commandLink value="Consultar" action="student_project_proposal_details?facesredirect=true">
+                        <h:commandLink value="Consultar" action="student_application_details?facesredirect=true">
                             <f:setPropertyActionListener
-                                target="#{administratorManager.currentProjectProposal}" value="#{object}" />
+                                target="#{administratorManager.currentApplication}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
+                        <h:commandLink value="Remover"
+                                       actionListener="#{administratorManager.removeApplication}">
+                            <f:param name="applicationId" id="applicationId"
+                                     value="#{object.id}" />
+                        </h:commandLink>
                     </h:form>
                 </p:column>
             </em:dt> 
