--- a/MasterManager-war/web/admin/admin_publictest_details.xhtml
+++ b/MasterManager-war/web/admin/admin_publictest_details.xhtml
@@ -10,7 +10,7 @@
     </h:head>
     <h:body>
 
-        <ui:composition template="./templates/skeleton.xhtml">
+        <ui:composition template="../templates/skeleton.xhtml">
             <ui:define name="title">CCP</ui:define>
             <ui:define name="main">
 
