--- a/MasterManager-war/web/admin/search_project_proposal.xhtml
+++ b/MasterManager-war/web/admin/search_project_proposal.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
-    <ui:composition template="./templates/skeleton.xhtml">
+    <ui:composition template="../templates/skeleton.xhtml">
         <ui:define name="title">CCP</ui:define>
         <ui:define name="main">
             <em:dt 
