já é possivel ver o estado da candidatura (criada enumeração para o estado da candidatura).

--- a/MasterManager-war/web/student/student_application_details.xhtml
+++ b/MasterManager-war/web/student/student_application_details.xhtml
@@ -19,6 +19,11 @@
                     <h:outputText 
                         id="id"
                         value="#{administratorManager.currentApplication.id}"/>
+                    
+                    <h:outputLabel for="applicationState" value="Estado da candidatura: " />
+                    <h:outputText 
+                        id="applicationState"
+                        value="#{administratorManager.currentApplication.applicationState}"/>
 
                     <h:outputLabel for="projectProposalCode" value="Código da proposta de projecto: " />
                     <h:outputText 
