--- a/MasterManager-war/web/student/student_application_update.xhtml
+++ b/MasterManager-war/web/student/student_application_update.xhtml
@@ -15,6 +15,11 @@
                         id="id"
                         value="#{administratorManager.currentApplication.id}"/>
 
+                    <h:outputLabel for="applicationState" value="Estado da candidatura: " />
+                    <h:outputText 
+                        id="applicationState"
+                        value="#{administratorManager.currentApplication.applicationState}"/>
+                    
                     <h:outputLabel for="projectProposalCode" value="Código da proposta de projecto: " />
                     <h:outputText 
                         id="projectProposalCode"
