--- a/MasterManager-war/web/login.xhtml
+++ b/MasterManager-war/web/login.xhtml
@@ -58,7 +58,7 @@
                 <h:commandButton
                     id="searchProjectProposal"
                     value="Procurar"
-                    action="search_project_proposals?facesredirect=true" />    
+                    action="search_project_proposal?facesredirect=true" />    
                 <h:message for="searchProjectProposal" style="color: red" />   
 
             </h:form> 
