--- a/MasterManager-war/web/admin/admin_index.xhtml
+++ b/MasterManager-war/web/admin/admin_index.xhtml
@@ -116,7 +116,7 @@
                 list="#{administratorManager.getAllProjectProposals('all')}">
                 <p:column headerText="Acções">
                     <h:form>
-                        <h:commandLink value="Detalhes" action="#{administratorManager.redirect('details')}">
+                        <h:commandLink value="Detalhes" action="admin_project_proposals_details?facesredirect=true">
                             <f:setPropertyActionListener
                                 target="#{administratorManager.currentProjectProposal}" value="#{object}" />
                         </h:commandLink>
@@ -141,7 +141,7 @@
                 <h:commandButton
                     id="searchProjectProposal"
                     value="Procurar"
-                    action="#{administratorManager.redirect('search')}" />    
+                    action="admin_search_project_proposal?facesredirect=true" />    
                 <h:message for="searchProjectProposal" style="color: red" />   
 
             </h:form> 
