--- a/MasterManager-war/web/project_proposals_details.xhtml
+++ b/MasterManager-war/web/project_proposals_details.xhtml
@@ -8,7 +8,7 @@
       xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
     <h:body>
 
-        <ui:composition template="../templates/skeleton.xhtml">
+        <ui:composition template="./templates/skeleton.xhtml">
             <ui:define name="title">CCP</ui:define>
             <ui:define name="main">
 
@@ -84,14 +84,7 @@
 
                 <br/>
 
-                <h:outputLink rendered="${administratorManager.userManager.isUserInRole('Teacher')}" 
-                              value="http://localhost:8080/MasterManager-war/faces/teacher/teacher_index.xhtml">
-                    Voltar
-                </h:outputLink>
-                <h:outputLink rendered="${administratorManager.userManager.isUserInRole('Institution')}" 
-                              value="http://localhost:8080/MasterManager-war/faces/institution/institution_index.xhtml">
-                    Voltar
-                </h:outputLink>
+                <h:link value="Voltar" outcome="login"/>
 
                 <h:messages errorStyle="color: red" />        
 
